# sshmenuc

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  config.example.json  config.json  contexts.json.example  pyproject.toml  pytest.ini  requirements.txt  setup.py  sync.json.example
.claude/sessions/: session_2026-05-22_11-45.md  session_2026-05-27_17-13.md
.github/workflows/: badge.yml  docs.yml  publish-pypi.yml  python-package.yml  release.yml
docs/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  keyboard_shortcuts.rst  usage.rst
docs/api/: core.rst  ui.rst  utils.rst
scripts/: validate-package.sh
sshmenu/: sshmenu.py
sshmenuc/: __init__.py  __main__.py  json_test.json  json_test.py  main.py  sshmenuc.py
sshmenuc/contexts/: __init__.py  context_manager.py  wizard.py
sshmenuc/core/: __init__.py  base.py  config.py  config_editor.py  launcher.py  navigation.py
sshmenuc/sync/: __init__.py  crypto.py  git_remote.py  passphrase_cache.py  sync_manager.py
sshmenuc/ui/: __init__.py  colors.py  display.py
sshmenuc/utils/: __init__.py  helpers.py
tests/: README.md  conftest.py  test_main.py  test_sshmenuc.py
tests/contexts/: test_context_manager.py  test_wizard.py
tests/core/: test_base.py  test_config.py  test_launcher.py  test_navigation.py  test_navigation_interactive.py
tests/sync/: test_crypto.py  test_git_remote.py  test_passphrase_cache.py  test_sync_manager.py
tests/ui/: test_colors.py  test_display.py
tests/utils/: test_helpers.py
