[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Sshmenuc"
version = "1.0.0"
description = "Command line SSH menu and helper utility with cluster support"
license = "MIT"
authors = [ "Davide Isoardi <davide.@isoardi.info>"]
readme = "README.md"
package-mode = true
repository = "https://github.com/disoardi/sshmenuc"

[tool.poetry.dependencies]
python = "^3.9"
args = "^0.1.0"
clint = "^0.5.1"
readchar = "^0.7"
docker = "^7.1.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
sshmenuc = "sshmenuc.sshmenuc:main"
