[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sshmenuc"
version = "1.1.0"
description = "Command line SSH menu and helper utility with cluster support (OO rewrite)."
readme = "README.md"
authors = ["Davide Isoardi <davide.@isoardi.info>"]
license = "GPLv3"
packages = [{ include = "sshmenuc" }]

[tool.poetry.dependencies]
python = "^3.9"
readchar = "^0.7"
clint = "^0.5.1"
docker = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
sshmenuc = "sshmenuc.sshmenuc:main"
