[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sshmenuc"
version = "1.1.0"
description = "Command line SSH menu and helper utility with cluster support (OO rewrite)."
readme = "README.md"
authors = ["Davide Isoardi <davide@isoardi.info>"]
license = "GPLv3"
packages = [{ include = "sshmenuc" }]

[tool.poetry.dependencies]
python = "^3.9"
readchar = "^0.7"
clint = "^0.5.1"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
sphinx = ">=7.0,<8.0"
sphinx-rtd-theme = ">=2.0"

[tool.poetry.scripts]
sshmenuc = "sshmenuc.main:main"
